--- a/branch.html
+++ b/branch.html
@@ -110,7 +110,7 @@
 
     <!-- LOGO 區塊 -->
     <section class="section logo-section" id="logo">
-      <img src="sceutlogo.png" alt="Sceut Logo">
+      <img src="S__7618679.jpg" alt="Sceut Logo">
       <h2>Sceut</h2>
       <p>香氣，從這裡開始。</p>
     </section>
@@ -120,7 +120,7 @@
       <h2>香水照片展示區</h2>
       <div class="carousel">
         <div class="carousel-track" id="carouselTrack">
-          <img src="螢幕擷取畫面 2025-09-22 235544.png" alt="香水1">
+          <img src="canmake.png" alt="香水1">
             <img src="Perfume2 (1).jpg" alt="香水2">
       
         </div>
